[metadata]
name = iostatexporter-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Simple Python I/O statistics exporter for Prometheus on FreeBSD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/iostatexporter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: BSD :: FreeBSD

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	daemonize >= 2.5.0
	lockfile >= 0.12.2
	prometheus-client >= 0.13.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    iostatexporter = iostatexporter.iostatexporter:mainStartup
